gitops/websites/sovereign/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sovereign-svc
  namespace: sovereign
spec:
  selector:
    app: sovereign-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
